--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --passWithNoTests",
     "test:watch": "NODE_ENV=test jest --watch",
     "lint": "eslint --ext .js,.ts src/",
     "lintervention": "node dist/scripts/lintervention.js",
@@ -48,9 +48,11 @@
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-sort-exports": "^0.7.0",
     "jest": "27",
-    "jest-canvas-mock": "^2.1.2",
     "jest-cli": "27",
+    "jest-matcher-one-of": "^1.0.2",
+    "jest-watch-typeahead": "^0.5.0",
     "prettier": "2.2.1",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.2"
   }
 }
