Update Danger output

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kapowaz/lintervention",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "license": "MIT",
   "description": "A tool for identifying ESLint rules you routinely ignore",
   "repository": "github:kapowaz/lintervention",
@@ -15,9 +15,9 @@
     "test": "NODE_ENV=test jest --passWithNoTests",
     "test:watch": "NODE_ENV=test jest --watch",
     "lint": "eslint --ext .js,.ts src/",
-    "lintervention": "node dist/scripts/lintervention.js",
-    "lintervention:staged": "node dist/scripts/lintervention.js --scope staged",
-    "lintervention:branch": "node dist/scripts/lintervention.js --scope branch",
+    "lintervention": "node dist/scripts/example.js",
+    "lintervention:staged": "node dist/scripts/example.js --scope staged",
+    "lintervention:branch": "node dist/scripts/example.js --scope branch",
     "typecheck": "tsc --emitDeclarationOnly false --noEmit",
     "build": "sh ./bin/build-dist.sh",
     "build:tsc": "tsc",
