--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "isolatedModules": true,
     "emitDeclarationOnly": true,
     "rootDir": "./src",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "types": ["jest", "node"]
   },
   "exclude": ["node_modules", "dist"],
   "include": ["**/*.ts"]
