--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kapowaz/lintervention",
-  "version": "0.5.2",
+  "version": "1.0.0-beta.0",
   "license": "MIT",
   "description": "A tool for identifying ESLint rules you routinely ignore",
   "repository": "github:kapowaz/lintervention",
