--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lintervention",
-  "version": "1.0.0",
+  "version": "1.1.0-beta.1",
   "license": "MIT",
   "description": "A tool for identifying ESLint rules you routinely ignore",
   "repository": "github:kapowaz/lintervention",
