--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "npm": "please-use-yarn",
     "yarn": ">= 1.22.0"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
