--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A tool for identifying ESLint rules you routinely ignore",
   "repository": "github:kapowaz/lintervention",
   "engines": {
-    "node": "18.13.*",
+    "node": "16.19.*",
     "npm": "please-use-yarn",
     "yarn": ">= 1.22.0"
   },
@@ -22,8 +22,7 @@
     "build": "sh ./bin/build-dist.sh",
     "build:tsc": "tsc",
     "build:js": "BABEL_ENV='dist-js-build' babel src --extensions '.ts,.js' --out-dir dist --ignore src/index.js,src/**/*.test.js,src/**/*.test.ts,src/test/** --quiet",
-    "prepare": "husky install",
-    "semantic-release": "semantic-release"
+    "prepare": "cd .. && husky install"
   },
   "bin": "./bin/lintervention",
   "dependencies": {
@@ -56,7 +55,6 @@
     "jest-matcher-one-of": "^1.0.2",
     "jest-watch-typeahead": "^0.5.0",
     "prettier": "2.2.1",
-    "semantic-release": "^20.1.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.2"
   }
