--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A tool for identifying ESLint rules you routinely ignore",
   "repository": "github:kapowaz/lintervention",
   "engines": {
-    "node": "16.19.*",
+    "node": ">= 16.19.*",
     "npm": "please-use-yarn",
     "yarn": ">= 1.22.0"
   },
